--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -21,6 +21,7 @@
 \newacronym{MPCC}{MPCC}{multi-phase cycle coding}
 \newacronym{LED}{LED}{light-emitting diodes}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
+\newacronym{ITR}{ITR}{information transfer rate}
 
 % Glossary
 
