--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -474,6 +474,29 @@ Visual stimuli section
 	url = {http://cognitrn.psych.indiana.edu/busey/N611Q700/Week1103/Herrman1-100Hz.pdf}
 }
 
+Information transfer rate (ITR)
+
+@article{itr_wolpaw,
+	title = {{EEG}-Based Communication: Improved Accuracy by Response Verification},
+	author = {Jonathan R. Wolpaw and Herbert Ramoser and Dennis J. McFarland and Gert Pfurtscheller},
+	journal = {IEEE Transactions on Rehabilitation Engineering},
+	volume = {6},
+	number = {3},
+	year = {1998},
+	pages = {326--333},
+	url = {http://ieeexplore.ieee.org.ezproxy.utlib.ee/stamp/stamp.jsp?tp=&arnumber=712231}
+}
+
+@article{itr,
+	title = {A study of the existing problems of estimating the information transfer rate in online brain–computer interfaces},
+	author = {Peng Yuan and Xiaorong Gao and Brendan Allison and Yijun Wang and Guangyu Bin and Shangkai Gao},
+	journal = {Journal of Neural Engineering},
+	year = {2013},
+	volume = {10},
+	number = {2},
+	url = {http://sccn.ucsd.edu/~yijun/pdfs/JNE13.pdf}
+}
+
 PSDA section
 
 @article{psda_snr1,
