Read through until signal processing section. Add pgfplot subplot letters. Split 3x2 plots.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -12,6 +12,14 @@
 \usepgfplotslibrary{groupplots}
 \usepackage{tikz-timing}
 %\usetikztiminglibrary{nicetabs} 
+\usepackage{alphalph} 			% subfigure letters to plots
+\makeatletter
+\pgfplotsset{
+    auto title/.style={
+        title=(\AlphAlph{\pgfplots@group@current@plot})
+    }
+}
+\makeatother
 
 \usepackage[nogroupskip, acronym]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}			% no title for glossary
