--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -1,8 +1,8 @@
 
 % Acronyms
 
-\newacronym{EEG}{EEG}{electroencephalography}
 \newacronym{BCI}{BCI}{brain-computer interface}
+\newacronym{EEG}{EEG}{electroencephalography}
 \newacronym{FFT}{FFT}{fast Fourier transform}
 \newacronym{CCA}{CCA}{canonical correlation analysis}
 \newacronym{MEG}{MEG}{magnetoencephalography}
@@ -19,7 +19,7 @@
 \newacronym{LASSO}{LASSO}{least absolute shrinkage and selection operator}
 \newacronym{LRT}{LRT}{likelihood ratio test}
 \newacronym{MPCC}{MPCC}{multi-phase cycle coding}
-\newacronym{LED}{LED}{light-emitting diodes}
+\newacronym{LED}{LED}{light-emitting diode}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{ITR}{ITR}{information transfer rate}
 
@@ -227,5 +227,9 @@
 }
 \newglossaryentry{zero padding}{
 	name = zero padding,
+	description = {--}
+}
+\newglossaryentry{digital signal}{
+	name = digital signal,
 	description = {--}
 }
