--- a/thesis/tex/introduction.tex
+++ b/thesis/tex/introduction.tex
@@ -9,6 +9,6 @@ This thesis describes an application that uses device called Emotiv EPOC to meas
 
 The first chapter of this thesis describes the biology of the brain and discusses, what aspect of the brain activity can actually be measured. In the first chapter also different techniques and devices that can be used to measure brain activity are compared.
 
-The second chapter describes how to evoke a brain response that can be extracted from the recording using only Emotiv EPOC and a laptop computer. This chapter describes the mathematical algorithms that can be used to extract the information from brain recording.
+The second chapter describes how to evoke a brain response that can be extracted from the recording of brain activity using only Emotiv EPOC and a laptop computer. The methods that can be used to analyse the recording are discussed in this chapter.
 
 The third chapter describes the application implemented as a practical part of this thesis. This chapter contains overview of related works, describes the signal processing and explains the novelty of the application.
