--- a/thesis/tikz/cross_correlation.tex
+++ b/thesis/tikz/cross_correlation.tex
@@ -19,7 +19,8 @@ ylabel = Signal,
 xlabel = Time,
 ylabel shift = -10 pt,
 enlarge x limits = 0.1,
-enlarge y limits = 0.1
+enlarge y limits = 0.1,
+auto title
 ]
 \addplot [blue]
 coordinates {
@@ -249,7 +250,8 @@ axis on top,
 ylabel = Measure of similarity,
 xlabel = Time lag,
 enlarge x limits = 0.1,
-enlarge y limits = 0.1
+enlarge y limits = 0.1,
+auto title
 ]
 \addplot [blue]
 coordinates {
