--- a/thesis/tikz/pure_tone.tex
+++ b/thesis/tikz/pure_tone.tex
@@ -19,7 +19,8 @@ xlabel = Time,
 ylabel = Signal,
 ylabel shift = -10 pt,
 enlarge x limits = 0.1,
-enlarge y limits = 0.1
+enlarge y limits = 0.1,
+auto title
 ]
 \addplot [blue, mark=*]
 coordinates {
@@ -80,7 +81,8 @@ axis on top,
 xlabel = Frequency,
 ylabel = Amplitude,
 enlarge x limits = 0.1,
-enlarge y limits = 0.1
+enlarge y limits = 0.1,
+auto title
 ]
 \addplot [blue, mark=*]
 coordinates {
