--- a/thesis/tikz/detrend_example.tex
+++ b/thesis/tikz/detrend_example.tex
@@ -18,7 +18,8 @@ axis on top,
 ylabel = Signal,
 ylabel shift = -10 pt,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 \addplot [blue]
 coordinates {
@@ -210,7 +211,8 @@ ymin=0, ymax=1,
 axis on top,
 ylabel = Amplitude,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 \addplot [blue, mark=*]
 coordinates {
@@ -277,7 +279,8 @@ xlabel = Time,
 ylabel = Signal,
 ylabel shift = -10 pt,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 \addplot [blue]
 coordinates {
@@ -376,7 +379,8 @@ axis on top,
 xlabel = Frequency,
 ylabel = Amplitude,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 \addplot [blue, mark=*]
 coordinates {
