--- a/thesis/tikz/square_wave.tex
+++ b/thesis/tikz/square_wave.tex
@@ -19,7 +19,8 @@ xlabel = Time,
 ylabel = Signal,
 ylabel shift = -10 pt,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 \addplot [blue]
 coordinates {
@@ -373,7 +374,8 @@ axis on top,
 xlabel = Frequency,
 ylabel = Amplitude,
 enlarge x limits = 0.05,
-enlarge y limits = 0.05
+enlarge y limits = 0.05,
+auto title
 ]
 
 \addplot [black, mark=*]
